--- a/style.css
+++ b/style.css
@@ -12,4 +12,86 @@
 html {
     box-sizing: border-box;
     font-size: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    font-size: 1.8rem;
+    display: grid;
+    /* justify-content: center; */
+    grid-template-rows: 15% auto;
+    height: 100vh;
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+header button {
+    text-align: center;
+    font-size: 1rem;
+    width: 5rem;
+    height: 2rem;
+}
+
+main {
+    display: grid;
+    padding: 2rem 0 2rem 0;
+    grid-gap: 2rem;
+    grid-template-columns: repeat(3, 30%);
+    grid-template-rows: repeat(auto-fill, 200px);
+    justify-content: center;
+    width: 80%;
+    margin: 0 auto;
+}
+
+main div {
+    border: 1px solid black;
+}
+
+main form {
+    display: none;
+    z-index: 9;
+    color: white;
+    position: fixed;
+    width: 33%;
+    right: 0;
+    left: 0;
+    margin-right: auto;
+    margin-left: auto;
+    line-height: 4rem;
+    font-size: 1.8rem;
+    background-color: black;
+    text-align: left;
+    padding: 1.5rem;
+}
+
+main form label,
+main form input {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+}
+
+main form label {
+    font-size: 2rem;
+}
+
+main form input {
+    padding: 1rem;
+    margin-bottom: 2rem;
+    border-radius: 24px;
+    outline: none;
+    border: 1px solid rgb(223, 225, 229);
+}
+
+main form button {
+    padding: 1rem;
+    border-radius: 0.5rem;
+    border: 1px solid rgb(223, 225, 229);
+    margin-right: 1rem;
+    margin-top: 1rem;
 }
