--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ main {
 main div {
     border: 1px solid black;
     line-height: 10rem;
-    text-align: center;
+    text-align: left;
 }
 
 main form {
